# LeanLLM

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  docker-compose.yml  pyproject.toml
.claude/: NEXT_SESSION_PROMPT.md
.claude/skills/doc-feature/: SKILL.md
.claude/skills/todo-progress/: SKILL.md
.claude/skills/todo-tests/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: BACKEND_STANDARDS.md  CODEBASE_OVERVIEW.md
leanllm/: __init__.py  cli.py  client.py  config.py  context.py  lineage.py  normalizer.py  proxy.py  redaction.py  replay.py  tracker.py  types.py
leanllm/cli/: __init__.py  _store.py  logs.py  migrate.py  replay.py  show.py
leanllm/events/: __init__.py  cost.py  models.py  queue.py  worker.py
leanllm/storage/: __init__.py  _hydrate.py  base.py  postgres.py  remote.py  sqlite.py
leanllm/storage/migrations/: runner.py
leanllm/storage/migrations/postgres/: alembic.ini  env.py
leanllm/storage/migrations/postgres/versions/: 20260415_0001_initial_schema.py  20260427_0001_initial_v2.py  20260427_0002_add_module_fields.py
scripts/: manual_test_e2e.py  manual_test_pipeline.py
tests/: conftest.py  test_chat.py  test_cli.py  test_client.py  test_config.py  test_context.py  test_cost.py  test_dx.py  test_lineage.py  test_models.py  test_normalizer.py  test_queue.py  test_redaction.py  test_remote.py  test_replay.py  test_resilient_delivery.py  test_runtime_toggles.py  test_sqlite.py  test_storage_factory.py  test_storage_query.py  test_worker.py
