[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leanllm-ai"
version = "1.0.0"
description = "Lightweight LLM wrapper with async event pipeline, multi-backend persistence and migrations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Gab-r-x", email = "ryksdev@gmail.com"},
]
keywords = ["llm", "litellm", "openai", "tracking", "observability", "analytics", "cost"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "litellm>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/Gab-r-x/LeanLLM"
Repository = "https://github.com/Gab-r-x/LeanLLM"
Issues = "https://github.com/Gab-r-x/LeanLLM/issues"

[project.optional-dependencies]
postgres = ["asyncpg>=0.29", "alembic>=1.13", "sqlalchemy[asyncio]>=2.0"]
sqlite = ["aiosqlite>=0.19"]
remote = ["httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "asyncpg>=0.29",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "sqlalchemy[asyncio]>=2.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
leanllm = "leanllm.cli:main"

[tool.setuptools.packages.find]
include = ["leanllm*"]

[tool.setuptools.package-data]
"leanllm.storage.migrations.postgres" = ["alembic.ini", "script.py.mako"]
"leanllm.storage.migrations.postgres.versions" = ["*.py"]
